--- a/styles/scss/_base.scss
+++ b/styles/scss/_base.scss
@@ -16,14 +16,36 @@ body {
     font-family: "Roboto", Arial;
     margin: 0 auto;
     overflow-x: hidden;
+    background: $site-background;
+    // color: transparentize($primary-color, .2);
+    color: $zype-color;
 }
 
 main {
-    max-width: 800px;
+    max-width: $max-content-width;
+
+    @include mediaQuery($breakpoint-900) {
+        max-width: none;
+    };
 }
 
 ul {
     margin: 0;
     padding: 0;
     list-style: none;
+}
+
+.site-container {
+    max-width: $max-content-width;
+    width: 90%;
+    margin: 60px auto;
+    text-align: center;
+    padding: 30px;
+
+    @include mediaQuery($breakpoint-900) {
+        padding: 0;
+        margin: 60px 0;
+        width: 100%;
+        max-width: none;
+    };
 }
