--- a/styles/scss/_video-list.scss
+++ b/styles/scss/_video-list.scss
@@ -1,21 +1,70 @@
-body {
-  padding-top: 440px;
+//other styles
+.main-content__video-list {
+  @include flex-column(nowrap, center, center);
+  margin: 30px 0;
+  background: transparentize($zype-color, .9);
+  box-shadow: $standard-box-shadow;
+  padding: 50px 0;
+  position: relative;
 }
 
+.main-content__video {
+    width: 100%;
+    border-radius: $standard-border-radius;
+    padding: 20px 60px;
+    margin: 15px 0 0;
+    max-width: 790px;
+
+    @include mediaQuery($breakpoint-750) {
+      padding: 20px 15px;
+    };
+}
+
+.main-content__video-image-container {
+    width: 100%;
+}
+
+.main-content__video-info-container {
+  width: 100%;
+  padding: 50px 0;
+  @include flex-column(nowrap, center, center);
+}
+
+.main-content__video-info-button {
+  width: 75%;
+  margin: 20px 0 0;
+  border: none;
+  padding: 20px;
+  background: transparentize($primary-color, .6);
+  color: white;
+  font-size: 1em;
+  min-width: 300px;
+  border-radius: $standard-border-radius;
+  cursor: pointer;
+  transition: $standard-transition;
+  display: none;
+
+  &:hover {
+    background: transparentize($primary-color, .4);
+  }
+}
+
+
+//parallax styles
 .parallax-background {
-  /*background: url("./10436-NMJ3BL.jpg") repeat;*/
-  /*background-size: 100%; this works*/
-  /*background-size: contain;*/
   position: absolute;
   width: auto;
   // height: 150%;
-  height: 140%;
+  height: 125%;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  z-index: -1;
   background-size: contain;
   overflow: hidden;
+
+  // @include mediaQuery($breakpoint-850) {
+  //   width: 100%;
+  // };
 }
 
 .parallax-background img {
@@ -24,55 +73,88 @@ body {
   height: 100%
 }
 
-.mountain {
-  background-image: url("http://static.thousandwonders.net/Neist.Point.original.966.jpg");
-  background-repeat: no-repeat;
-}
-
-.lake {
-  background-image: url("http://jonvilma.com/images/lake-4.jpg");
-  background-repeat: no-repeat;
-}
-
-.forest {
-  background-image: url("https://static.pexels.com/photos/38136/pexels-photo-38136.jpeg");
-  background-repeat: no-repeat;
-}
-
-.scotland {
-  background-image: url("https://photos.smugmug.com/Europe/Scotland/i-PShzzPJ/0/XL/skye-old-man-of-storr-XL.jpg");
-  background-repeat: no-repeat;
-}
-
-
 .parallax-container {
-    width: 800px;
+    width: auto;
     height: 450px;
     position: relative;
-    margin: 50px auto;
     overflow: hidden;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
+    border-radius: $standard-border-radius;
 }
 
 .parallax-foreground {
+  position: absolute;
+  opacity: .9;
+}
+
+.parallax-foreground.foreground-play {
+  bottom: 40px;
+  right: 40px;
+  width: 55px;
+  height: 55px;
+  font-size: 1.8em;
+  border: 7px solid;
+  border-radius: 50%;
+  @include flex-column(nowrap, center, center);
+  color: $zype-color;
+  transition: $standard-transition;
+  cursor: pointer;
+  background: white;
+  opacity: .8;
+
+  &:hover {
+    transform: scale(1.1);
+    opacity: 1;
+  }
+}
+
+i.fa.fa-play {
+    color: inherit;
+    margin-right: -5px;
+}
+
+.parallax-foreground.foreground-title {
   color: #fff;
-  font-family: arial;
-  width: 250px;
+  width: auto;
   height: auto;
   margin: auto;
   line-height: 20px;
-  font-size: 16px;
+  font-size: .9em;
   padding: 20px;
-  background: black;
+  background: $zype-gradient;
+  top: 0;
+  left: 0;
+  max-width: 300px;
+  border-bottom-right-radius: 3px;
+
+  @include mediaQuery($breakpoint-750) {
+    width: 100%;
+    max-width: none;
+    border-bottom-right-radius: 0;
+  };
 }
 
 .parallax-foreground__caption {
   height: auto;
   width: 100%;
   text-align: center;
+  margin: 0;
 }
+
+
+//loader
+.loading-placeholder {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    padding: 20px;
+    width: 100px;
+    height: 100px;
+
+    img {
+      width: 100%;
+    }
+}
+
 
 
