--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -9,6 +9,7 @@
 .header__title {
     font-size: 2.5em;
     float: right;
+    font-weight: 800;
 
     @include mediaQuery($breakpoint-850) {
         font-size: 2.2em;
@@ -27,7 +28,8 @@
 
 .header__logo {
     float: left;
-    width: 13%;
+    width: 15%;
+    max-width: 150px;
 
     @include mediaQuery($breakpoint-850) {
         float: none;
