--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -23,5 +23,6 @@ $breakpoint-400: 400px;
 $standard-border-radius: 4px;
 $standard-transition: all .2s;
 $standard-box-shadow: 0 0 10px 0px rgba(128, 128, 128, 0.5) inset;
+$standard-box-shadow-outset: 0 0 10px 0px rgba(128, 128, 128, 0.5);
 $max-content-width: 850px;
 
