--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -6,6 +6,7 @@ $hover-highlight: white;
 $site-background: radial-gradient(circle, white, rgba(181, 181, 181, 0.3));
 
 $zype-color: #2696c6;
+$zype-color-secondary: #c1d52f;
 $zype-gradient: linear-gradient(to bottom, #2696c6 0%,#29b2c4 100%);
 
 
@@ -24,5 +25,6 @@ $standard-border-radius: 4px;
 $standard-transition: all .2s;
 $standard-box-shadow: 0 0 10px 0px rgba(128, 128, 128, 0.5) inset;
 $standard-box-shadow-outset: 0 0 10px 0px rgba(128, 128, 128, 0.5);
-$max-content-width: 850px;
+// $max-content-width: 850px;
+$max-content-width: 865px;
 
