--- a/styles/scss/_video-list.scss
+++ b/styles/scss/_video-list.scss
@@ -1,10 +1,11 @@
-//other styles
+//video list styles
+
 .main-content__video-list {
   @include flex-column(nowrap, center, center);
   margin: 30px 0;
   background: transparentize($zype-color, .9);
   box-shadow: $standard-box-shadow;
-  padding: 50px 0;
+  padding: 50px 0 75px;
   position: relative;
 }
 
@@ -30,128 +31,25 @@
   @include flex-column(nowrap, center, center);
 }
 
-.main-content__video-info-button {
+.main-content__video-info-button,
+.load-more-button {
   width: 75%;
   margin: 20px 0 0;
   border: none;
   padding: 20px;
-  background: transparentize($primary-color, .6);
+  background: $zype-color-secondary;
   color: white;
   font-size: 1em;
   min-width: 300px;
   border-radius: $standard-border-radius;
   cursor: pointer;
   transition: $standard-transition;
-  display: none;
+  // display: none;
 
   &:hover {
-    background: transparentize($primary-color, .4);
+    background: $zype-color;
   }
 }
-
-
-//parallax styles
-.parallax-background {
-  position: absolute;
-  width: auto;
-  // height: 150%;
-  height: 125%;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  background-size: contain;
-  overflow: hidden;
-
-  // @include mediaQuery($breakpoint-850) {
-  //   width: 100%;
-  // };
-}
-
-.parallax-background img {
-  width: auto;
-  display: block;
-  height: 100%
-}
-
-.parallax-container {
-    width: auto;
-    height: 450px;
-    position: relative;
-    overflow: hidden;
-    border-radius: $standard-border-radius;
-}
-
-.parallax-foreground {
-  position: absolute;
-  opacity: .9;
-}
-
-.parallax-foreground.foreground-play {
-  bottom: 40px;
-  right: 40px;
-  width: 60px;
-  height: 60px;
-  font-size: 1.8em;
-  border: 7px solid;
-  border-radius: 50%;
-  @include flex-column(nowrap, center, center);
-  color: $zype-color;
-  transition: $standard-transition;
-  cursor: pointer;
-  background: white;
-  opacity: .8;
-
-  @include mediaQuery($breakpoint-850) {
-    width: 68px;
-    height: 68px;
-    right: 50%;
-    transform: translateX(50%) scale(1);
-  };
-
-  &:hover {
-    transform: scale(1.1);
-    opacity: 1;
-
-    @include mediaQuery($breakpoint-850) {
-      transform: translateX(50%) scale(1);
-      opacity: .8;
-    };
-  }
-}
-
-i.fa.fa-play {
-    color: inherit;
-    margin-right: -5px;
-}
-
-.parallax-foreground.foreground-title {
-  color: #fff;
-  width: auto;
-  height: auto;
-  margin: auto;
-  line-height: 20px;
-  font-size: .9em;
-  padding: 20px;
-  background: $zype-gradient;
-  top: 0;
-  left: 0;
-  max-width: 300px;
-  border-bottom-right-radius: 3px;
-
-  @include mediaQuery($breakpoint-750) {
-    width: 100%;
-    max-width: none;
-    border-bottom-right-radius: 0;
-  };
-}
-
-.parallax-foreground__caption {
-  height: auto;
-  width: 100%;
-  text-align: center;
-  margin: 0;
-}
-
 
 //loader
 .loading-placeholder {
@@ -168,5 +66,33 @@ i.fa.fa-play {
     }
 }
 
+
+//top button
+.top-button {
+  height: 45px;
+  width: 55px;
+  position: fixed;
+  bottom: 30px;
+  right: -100px;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+  background: #f9f9f9;
+  z-index: 100;
+  box-shadow: 1px 1px 2px 0 #d3d3d3;
+  transition: all .3s;
+  // transform: translateX(100px);
+  cursor: pointer;
+
+  img {
+    width: 40%;
+  }
+}
+
+.top-button.shown {
+  // transform: translateX(0);
+  right: 30px;
+}
 
 
