--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -45,7 +45,7 @@ ul {
   position: absolute;
   width: auto;
   height: 125%;
-  top: 0;
+  top: -1px;
   left: 50%;
   transform: translateX(-50%);
   background-size: contain;
