--- a/styles/scss/_parallax.scss
+++ b/styles/scss/_parallax.scss
@@ -3,7 +3,7 @@
   position: absolute;
   width: auto;
   height: 125%;
-  top: 0;
+  top: -1px;
   left: 50%;
   transform: translateX(-50%);
   background-size: contain;
