--- a/styles/scss/_video-list.scss
+++ b/styles/scss/_video-list.scss
@@ -67,6 +67,14 @@
     }
 }
 
+.loading-error-message {
+    padding: 2% 3% 0;
+    font-weight: 800;
+    line-height: 27px;
+    color: $error-color;
+    font-size: 1.05em;
+}
+
 
 //top button
 .top-button {
