--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -9,6 +9,7 @@ $zype-color: #2696c6;
 $zype-color-secondary: #c1d52f;
 $zype-gradient: linear-gradient(to bottom, #2696c6 0%,#29b2c4 100%);
 
+$error-color: #bd0404;
 
 // breakpoints
 $breakpoint-900: 900px;
@@ -25,6 +26,6 @@ $standard-border-radius: 4px;
 $standard-transition: all .2s;
 $standard-box-shadow: 0 0 10px 0px rgba(128, 128, 128, 0.5) inset;
 $standard-box-shadow-outset: 0 0 10px 0px rgba(128, 128, 128, 0.5);
-// $max-content-width: 850px;
-$max-content-width: 865px;
+// $max-content-width: 865px;
+$max-content-width: 880px;
 
